--- a/views/projects.html
+++ b/views/projects.html
@@ -185,7 +185,7 @@
                                 <div class="webdev-project-card under-development">
                                     <div class="under-dev-content">
                                         <div class="under-dev-icon"><i class="fas fa-desktop"></i></div>
-                                        <h4>Website Project</h4>
+                                        <h4>Under Development</h4>
                                         <p>Under Development</p>
                                         <div class="loading-dots"><span></span><span></span><span></span></div>
                                     </div>
@@ -195,7 +195,7 @@
                                 <div class="webdev-project-card under-development">
                                     <div class="under-dev-content">
                                         <div class="under-dev-icon"><i class="fas fa-shopping-cart"></i></div>
-                                        <h4>E-Commerce</h4>
+                                        <h4>Under Development</h4>
                                         <p>Under Development</p>
                                         <div class="loading-dots"><span></span><span></span><span></span></div>
                                     </div>
@@ -205,7 +205,7 @@
                                 <div class="webdev-project-card under-development">
                                     <div class="under-dev-content">
                                         <div class="under-dev-icon"><i class="fas fa-user"></i></div>
-                                        <h4>Portfolio Site</h4>
+                                        <h4>Under Development</h4>
                                         <p>Under Development</p>
                                         <div class="loading-dots"><span></span><span></span><span></span></div>
                                     </div>
@@ -215,7 +215,7 @@
                                 <div class="webdev-project-card under-development">
                                     <div class="under-dev-content">
                                         <div class="under-dev-icon"><i class="fas fa-graduation-cap"></i></div>
-                                        <h4>Learning Platform</h4>
+                                        <h4>Under Development</h4>
                                         <p>Under Development</p>
                                         <div class="loading-dots"><span></span><span></span><span></span></div>
                                     </div>
@@ -225,7 +225,7 @@
                                 <div class="webdev-project-card under-development">
                                     <div class="under-dev-content">
                                         <div class="under-dev-icon"><i class="fas fa-building"></i></div>
-                                        <h4>Business Directory</h4>
+                                        <h4>Under Development</h4>
                                         <p>Under Development</p>
                                         <div class="loading-dots"><span></span><span></span><span></span></div>
                                     </div>
@@ -235,7 +235,7 @@
                                 <div class="webdev-project-card under-development">
                                     <div class="under-dev-content">
                                         <div class="under-dev-icon"><i class="fas fa-chart-bar"></i></div>
-                                        <h4>Analytics Dashboard</h4>
+                                        <h4>Under Development</h4>
                                         <p>Under Development</p>
                                         <div class="loading-dots"><span></span><span></span><span></span></div>
                                     </div>
